--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm run test:api
         continue-on-error: true
 
-      - name: Upload Cypress Artifacts (videos, screenshots)
+      # - name: Upload Cypress Artifacts (videos, screenshots)
         if: always()
         uses: actions/upload-artifact@v4
         with:
