--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,13 +31,13 @@ jobs:
         continue-on-error: true
 
       # - name: Upload Cypress Artifacts (videos, screenshots)
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: cypress-artifacts
-          path: |
-            # cypress/videos
-            cypress/screenshots
+      #   if: always()
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: cypress-artifacts
+      #     path: |
+      #       # cypress/videos
+      #       cypress/screenshots
 
       # - name: Upload Newman Reports (if exists)
       #   if: always()
